styles.css
@import url('https://fonts.googleapis.com/css2?family=Overpass:wght@100&family=Ubuntu&display=swap');
/* font-family: 'Overpass', sans-serif;
   font-family: 'Ubuntu', sans-serif; */

:root {
    /* Primary */
    --light-red-cta-text: hsl(356, 100%, 66%);
    --very-light-red-cta-hover-background: hsl(355, 100%, 74%);
    --very-dark-blue-heading: hsl(208, 49%, 24%);
    /* Neutral */
    --white: hsl(0, 0%, 100%);
    --grayish-blue-footer-text: hsl(240, 2%, 79%);
    --very-dark-grayish-blue-body-copy: hsl(207, 13%, 34%);
    --very-dark-black-blue-footer-background: hsl(240, 10%, 16%);
    /* Gradient -> */
    /* Background gradient-Intro/CTA mobile nav */
    --very-light-red: hsl(13, 100%, 72%);
    --light-red: hsl(353, 100%, 62%);
    /* Background-gradient-body */
    --very-dark-gray-blue: hsl(237, 17%, 21%);
    --very-dark-desaturated-blue: hsl(237, 23%, 32%);
    /* fonts */
    --overpass: 'Overpass', sans-serif;
    --ubuntu: 'Ubuntu', sans-serif;
}

* {
    padding: 0;
    margin: 0;
    box-sizing: border-box;
}

body {
    /* background-color: black; */
    background-color: #eee;
}

.intro {
    width: 100%;
    position: relative;
    overflow: hidden;
    border-bottom-left-radius: 70px;
}

.intro::after {
    content: '';
    position: absolute;
    top: 16%;
    width: 100vw;
    height: 100%;
    right: 10%;
    transform: translateX(-50%);
    transform: scale(2);
    background-image: url("images/bg-pattern-intro-mobile.svg");
    background-size: cover;
    background-repeat: no-repeat;
    overflow: hidden;
    z-index: 2;
}

.overlay {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    background: linear-gradient(169deg, hsl(13, 100%, 72%), hsl(353, 100%, 62%));
}

.logo-and-hamburger {
    padding-top: 20px;
    margin: 20px auto;
    width: 90%;
    display: flex;
    justify-content: space-between;
    z-index: 5;
    position: sticky;
}

.hamburger {
    align-self: flex-start;
    margin-top: 10px;
    cursor: pointer;
}

.close {
    display: none;
}

nav {
    background-color: var(--white);
    width: 90%;
    margin: 110px auto;
    padding: 30px;
    z-index: 5;
    border-radius: 10px;
    box-shadow: 5px 5px 5px rgba(0, 0, 0, .1);
    overflow: visible;
    position: fixed;
    left: 100%;
    font-family: var(--ubuntu);
    transition: .4s;
}

.display-nav {
    left: 5%;
}

nav p {
    text-align: center;
    font-size: 1.3rem;
    font-weight: 600;
    letter-spacing: 1px;
    color: var(--very-dark-blue-heading);
}

.product,
.company,
.connect {
    display: flex;
    justify-content: center;
    margin-top: 20px;
}

.connect p:hover {
    color: var(--very-dark-grayish-blue-body-copy);
}

.product img,
.company img,
.connect img {
    margin-left: 10px;
    align-self: center;
    transition: .4s;
}

.connect-items {
    width: 100%;
    /* height: 60px; */
    background-color: #eee;
    border-radius: 7px;
    margin-top: 20px;
}

.display-arrow {
    transform: rotate(540deg);
}

.connect-items {
    display: none;
    padding: 0 20px 20px 20px;
}

.display-connect-items {
    display: block;
}

.connect-items p {
    padding-top: 25px;
    font-size: .9rem;
    color: var(--very-dark-grayish-blue-body-copy);
}

.login-and-signup {
    display: flex;
    flex-direction: column;
    margin-top: 40px;
    padding-top: 20px;
    border-top: 1px solid #ddd;
}

.signup {
    margin: 10px auto;
    background: linear-gradient(169deg, hsl(13, 100%, 72%), hsl(353, 100%, 62%));
    padding: 20px;
    width: 190px;
    border-radius: 30px;
}

.signup p {
    color: var(--white);
}

.intro-info{
    position: sticky;
    z-index: 5;
    width: 80%;
    margin: 9rem auto;
    color: var(--white);
    font-family: var(--ubuntu);
    text-align: center;
}
.intro-info h2{
    font-size: 1.8rem;
    letter-spacing: 1px;
    line-height: 1.6;
}

.intro-info h2 + p{
    margin-top: 1rem;
    line-height: 1.4;
}

.get-started{
    width: 83%;
    margin: 2rem auto;
    display: flex;
    justify-content: space-between;
    font-weight: 700;
}
.start-btn{
    padding: .8em;
    background-color: var(--white);
    color: var(--light-red);
    border-radius: 40px;
}
.info-btn{
    padding: .8em;
    color: var(--white);
    border: 2px solid var(--white);
    border-radius: 40px;
}

@media screen and (min-width: 1024px) {

    .hamburger {
        display: none;
    }

    .logo {
        align-self: center;
    }

    nav {
        overflow: visible;
        transition: 0s;
        position: sticky;
        left: 5%;
        background: none;
        margin: 20px auto;
        padding: 0;
        box-shadow: none;

        height: auto;
    }

    .nav-items {
        display: flex;
        justify-content: space-between;
    }

    nav p {
        text-align: center;
        font-size: 1.3rem;
        font-weight: 600;
        letter-spacing: 1px;
        color: var(--white);
    }

    .links {
        display: flex;
        margin-left: 140px;
    }

    .product,
    .company,
    .connect {
        display: flex;
        justify-content: center;
        align-self: center;
        margin-top: 0;
        margin-left: 20px;
        cursor: pointer;
    }

    .connect p:hover {
        color: var(--white);
        text-decoration: underline;
    }

    .product img,
    .company img,
    .connect img {
        margin-left: 10px;
        align-self: center;
        filter: brightness(0) invert(1);
        transition: .4s;
    }

    .connect-items {
        width: 100%;
        background-color: var(--white);
        border-radius: 7px;
        margin-top: 20px;
        width: 160px;
        position: fixed;
        top: 70px;
        left: 460px;
        display: none;
        padding: 0 20px 20px 20px;
    }

    .connect-items p {
        text-align: left;
    }

    .display-connect-items {
        display: block;
    }

    .connect-items p {
        padding-top: 25px;
        font-size: .9rem;
        color: var(--very-dark-grayish-blue-body-copy);
    }
    
    .connect-items p:hover{
        color: var(--very-dark-blue-heading);
    }

    .login-and-signup {
        display: flex;
        flex-direction: row;
        justify-content: space-between;
        margin-top: 0;
        padding-top: 0;
        border: none;
    }

    .login {
        align-self: center;
        margin-right: 10px;
        cursor: pointer;
    }

    .signup {
        margin: 10px auto;
        background: var(--white);
        height: 60px;
        align-self: center;
        cursor: pointer;
    }

    .signup:hover{
        background: var(--very-light-red-cta-hover-background);
        opacity: .2;
    }

    .signup p {
        color: var(--light-red-cta-text) !important;
    }
    .signupHover{
        color: var(--white) !important;
    }
}   

